--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="icon" type="image/png" href="media/favicon/favicon-32x32.png" sizes="32x32" />
     <link rel="icon" type="image/png" href="media/favicon/favicon-16x16.png" sizes="16x16" />
 
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/main.min.css">
 
     <!-- Printing and PDF exports -->
     <script>
@@ -31,7 +31,7 @@
   </div>
 
     <script src="lib/js/head.min.js"></script>
-    <script src="js/reveal.js"></script>
+    <script src="js/reveal.min.js"></script>
     <script>
       // More info https://github.com/hakimel/reveal.js#configuration
       Reveal.initialize({
