--- a/index.html
+++ b/index.html
@@ -24,9 +24,58 @@
       <div class="slides">
 
 <section>
-  <h1 class="huge">Presentation Name</h1>
-</section>
+  <section>
+    <h2>Presentation Scaffold
+      <small>Reveal.js Presentation Framework with Some Special Sauce</small>
+    </h2>
+    <h2><i class="fa fa-arrow-down" aria-hidden="true"></i></h2>
+  </section>
 
+  <section>
+    <h1>... including</h1>
+  </section>
+
+  <section>
+    <h1 class="huge">Custom CSS Styles</h1>
+  </section>
+
+  <section>
+    <h1>Font Awesome <i class="fa fa-thumbs-o-up" aria-hidden="true"></i> </h1>
+  </section>
+
+  <section>
+    <h2><strong>&amp;</strong> Twitter Bootstrap</h2>
+    <div id="bs-example">
+      <div class="row">
+        <div class="col-md-1">.col-md-1</div>
+        <div class="col-md-1">.col-md-1</div>
+        <div class="col-md-1">.col-md-1</div>
+        <div class="col-md-1">.col-md-1</div>
+        <div class="col-md-1">.col-md-1</div>
+        <div class="col-md-1">.col-md-1</div>
+        <div class="col-md-1">.col-md-1</div>
+        <div class="col-md-1">.col-md-1</div>
+        <div class="col-md-1">.col-md-1</div>
+        <div class="col-md-1">.col-md-1</div>
+        <div class="col-md-1">.col-md-1</div>
+        <div class="col-md-1">.col-md-1</div>
+      </div>
+      <div class="row">
+        <div class="col-md-8">.col-md-8</div>
+        <div class="col-md-4">.col-md-4</div>
+      </div>
+      <div class="row">
+        <div class="col-md-4">.col-md-4</div>
+        <div class="col-md-4">.col-md-4</div>
+        <div class="col-md-4">.col-md-4</div>
+      </div>
+      <div class="row">
+        <div class="col-md-6">.col-md-6</div>
+        <div class="col-md-6">.col-md-6</div>
+      </div>
+    </div>
+  </section>
+</section>
     </div>
   </div>
 
